--- a/style.css
+++ b/style.css
@@ -55,4 +55,8 @@ body {
     background: black;
     position: absolute;
     top: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.5s;
+    transition-timing-function: ease;
 }
